--- a/BookStore/package.json
+++ b/BookStore/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5"
